@startuml
skinparam classAttributeIconSize 0

package "com.negoreserva.common.model" {
    class CommonModel {
        - id: Long
        - uuid: UUID
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
    }

    class ConcreteModel {
        - createdBy: UUID
        - updatedBy: UUID
        - deletedBy: UUID
        - deletedAt: LocalDateTime
    }

    CommonModel <|-- ConcreteModel
}

package "com.negoreserva.client.feature.user.model" {
    class User <<entity>> {
        - uuid: UUID
        - name: String
        - email: String <<unique, Email>>
        - phone: String <<unique, Pattern>>
        - password: String
        - birthday: LocalDate
        - createdAt: LocalDateTime
        - updatedAt: LocalDateTime
        - createdBy: UUID
        - updatedBy: UUID
        - deletedBy: UUID
        - deletedAt: LocalDateTime
        --
        + toResponse(): UserResponse
    }

    ConcreteModel <|-- User
}

package "com.negoreserva.client.feature.user.dto.response" {
    class UserResponse {
        - uuid: UUID
        - name: String
        - email: String
        - phone: String
    }
}

User --> UserResponse : toResponse()

package "com.negoreserva.client.feature.user.dto.request" {
    class UserCreateRequest {
        - name: String
        - email: String
        - phone: String
        - password: String
        - birthday: LocalDate
        --
        + toModel(): User
    }

    class UserUpdateRequest {
        - name: String
        - email: String
        - phone: String
        - password: String
        - birthday: LocalDate
        --
        + toModel(): User
    }
}

@enduml
